--- a/VRChat/68/1332968.html
+++ b/VRChat/68/1332968.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4KXOMyfNrZjzOWDl3XqIhgvNAx6O7kBk9LvKOCelf7U="></script>
+    "d+TW4OhrTcVENYe9qx3yUoFWdgUvIy9CknsNgMo2mrY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター用モデル「メイデンちゃん」","description":"オリジナル3Dモデルのメイデンちゃんです\n\n最新版はver1.01になります\nよろしければそちらの方をDLしていただくようお願いします\n\nVRchatやバーチャルキャスト等のVRアバター用のモデルです。\nfbxファイルとテクスチャデータが同梱されていますのでゲームの素材や改変モデルの素材にもご利用できます。\nなお、本データの二次配布は改変の有無にかかわらず禁止です。\n\n\n---内容---\n\n・meiden.vrm\n　各種リップシンクとモーフを同梱したvrmファイルです\n・meiden.fbx\n　メイデンちゃんのモデルデータです\n・tex1.png\n・tex2.png\n　メイデンちゃんのテクスチャデータです\n・Readme.txt\n　利用規約と説明書です\n\n\n---利用規約---\n本モデルの改変やゲーム内の利用は自由です\n公序良俗に反しない範囲で正しくお使いください。\n\nただし、収益に関しては一言連絡いただけると幸いです。\n\n\n---注意事項---\n\nAnimation TyoeをHumanoidにした際にjawに前髪のボーンが入ってしまうので必要な場合は外してください(顎のボーンは入れていません)\ndynamic bone等の揺れ物設定の際は○○_1という名前のボーンを指定してあげるときれいに揺れます、揺れ物の数は全部で17つです。","url":"https://booth.pm/ja/items/1332968","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/998e09cb-ceb5-4063-a616-c88d4d349f0f/i/1332968/dccbb3b1-1e7c-4d1f-85b1-85575f7bf677_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4KXOMyfNrZjzOWDl3XqIhgvNAx6O7kBk9LvKOCelf7U="></script>
+    nonce="d+TW4OhrTcVENYe9qx3yUoFWdgUvIy9CknsNgMo2mrY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -421,9 +421,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
