--- a/VRChat/43/1332943.html
+++ b/VRChat/43/1332943.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uaKoNSx5qcRriNcCquGfLSG1QysSExA/ZRTVXiuVp+8="></script>
+    "TRFS1IT54Cu8gzLRuyH/blRqhW39olgEVAiUKBTQz2g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蛇目ちゃん！レッド！","description":"赤髪、ポニーテール、アームカバー、片足ニーソ、スリットスカート、巨乳という属性バーゲンセールなキャラクターです。\nunityパッケージ、テクスチャ、blender2.79bプロジェクトファイル、VRMファイル、FBXファイルをを添付しているので、どうぞご自由に。\n\n改変、商用利用、再配布を認めますが、製作者は一切の責任を負わないものとします。\n著作権やその他利用規約はJame-chan2.4配布用.zipに同封されているreadme.txtを参照してください。\nなにか疑問や要望、報告のある方は「@Minie_vrc」へどうぞ。","url":"https://booth.pm/ja/items/1332943","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/167100b5-c9f2-4a22-89d6-d79e45de21ed/i/1332943/7b419b3d-2656-4625-a594-12f7566291da_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uaKoNSx5qcRriNcCquGfLSG1QysSExA/ZRTVXiuVp+8="></script>
+    nonce="TRFS1IT54Cu8gzLRuyH/blRqhW39olgEVAiUKBTQz2g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -377,9 +377,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
