--- a/VRChat/82/1327882.html
+++ b/VRChat/82/1327882.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7M34I5xoUvwIpUMk2t5Z6dNkXnR50NDsW7FESV8dbZY="></script>
+    "xSR/PAfI9LoWgLGZ2t69WvlbbXb4bj35vhC9seY8InU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メイドの夏制服｜#VRoid","description":"既存のメイドワンピースをベースに夏制服へアレンジしました。\nVRChatで使用できるエミッションデータも付属しています。\n特典版には赤リボン＋オプションのリボンが2種付属します。\n\nVRoid Studioのワンピース（半袖）に使用する想定で制作しています。\n\n既存のメイドワンピースは長袖です。\nhttps://yui-noe.booth.pm/items/1273314","url":"https://booth.pm/ja/items/1327882","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1500","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1327882/8d2bf892-e71b-40ce-a74b-c09e55c8dc16_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7M34I5xoUvwIpUMk2t5Z6dNkXnR50NDsW7FESV8dbZY="></script>
+    nonce="xSR/PAfI9LoWgLGZ2t69WvlbbXb4bj35vhC9seY8InU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -572,9 +572,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
