--- a/VRChat/06/1327006.html
+++ b/VRChat/06/1327006.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "iAXwWP3SLWrt/7/XGrnadDVdzIQqJihU9uctxij6k0o="></script>
+    "oejYs2MwnPOW49u7G6c10g7+Wu0kSz6w+Uf1nGKaSDE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ユイノエ肌｜#VRoid","description":"デフォルトの肌をベースにマットな質感を残しつつも、やわらかく血色の良い肌色を表現した顔と体の肌テクスチャです。\nメイクなしの肌、二重、頬染め、唇染め大小、鼻ハイライト、鼻ラインが各々分かれたデータとメイクアップ済みのデータが付属します。\nパーツを組み合わせて好みのお顔にメイクアップ！\n\n特典版では染めと染めのハイライトが分れているのでより詳細にこだわることができます。\n詳しくは同梱ファイル・使い方をご参照ください。\n\n黒髪やこげ茶などの暗く濃い髪色にはノーマルが、白髪や水色などの明るく薄い髪色にはペールがお勧めです。\n\nアイライン部分の色抜け対策済みですが形状によっては色抜けしてしまう場合がございます。その場合は適宜ご調整ください。\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1327006","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1327006/540fca6d-7be4-4469-8b99-52471043aa87_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iAXwWP3SLWrt/7/XGrnadDVdzIQqJihU9uctxij6k0o="></script>
+    nonce="oejYs2MwnPOW49u7G6c10g7+Wu0kSz6w+Uf1nGKaSDE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -841,9 +841,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
